# Simple-calculator

./: .gitignore  CMakeLists.txt
include/calculator/: Ast.h  Environment.h  Parser.h  Tokenizer.h
src/: Parser.cpp  Tokenizer.cpp  main.cpp
test/: CMakeLists.txt  test_basic.cpp
